2006-09-12  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Swap wr_id and next members of
	struct ibv_send_wr and struct ibv_recv_wr.  This allows wr_id to
	be naturally aligned without padding on 32-bit platforms.

2006-08-23  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/driver.h: Add a definition of the macro
	IBV_CMD_RESIZE_CQ_HAS_RESP_PARAMS so that low-level driver plugins
	can detect the changed signature of ibv_cmd_resize_cq().

2006-08-23  Ralph Campbell  <ralph.campbell@qlogic.com>

	* src/cmd.c (ibv_cmd_resize_cq): Add resp and resp_size parameters
	so that the low-level driver in the kernel can return
	device-specific information from the resize CQ operation.

2006-07-26  Roland Dreier  <rdreier@cisco.com>

	* src/verbs.c (ibv_reg_mr, ibv_dereg_mr): Add calls to
	ibv_dontfork_range() and ibv_dofork_range() for memory regions
	registered by library consumers.

	* include/infiniband/verbs.h: Add declaration of ibv_fork_init().

	* include/infiniband/driver.h: Add declarations of
	ibv_dontfork_range() and ibv_dofork_range().

	* src/memory.c: Rewrite to use a red-black tree instead of a
	linked list.  Change from doing mlock()/munlock() to
	madvise(..., MADV_DONTFORK) and madvise(..., MADV_DOFORK), and
	change the name of the entry points to ibv_dontfork_range() and
	ibv_dofork_range().  Add ibv_fork_init() for applications to
	request fork-safe behavior.

	* src/ibverbs.h: Kill off unused declarations.

	* src/init.c (ibverbs_init): Get rid of call to ibv_init_mem_map().

	* include/infiniband/verbs.h: Add addr and length field to struct
	ibv_mr so that memory regions can be madvised().  This changes the
	ABI, since the layout of struct ibv_mr is changed.

2006-07-04  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/arch.h: Fix typo in sparc mb()
	implementation: the asm should just be empty -- the "sync"
	instruction was mistakenly cut and pasted from the ppc version.
